--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "avengers-clicky-game",
-  "homepage": "http://mrubenstein6192.github.io/avengers-clicky-game",
+  "homepage": "https://mrubenstein6192.github.io/avengers-clicky-game",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -11,7 +11,7 @@
   },
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -b master -d build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
